src/compiler/gen/simplifiedJavaGrammarParser.py
# Generated from c:\Users\cassi\Documents\dev\uni\compilers\simple-java-compiler\simple-java\simplifiedJavaGrammar.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class simplifiedJavaGrammarParser ( Parser ):

    grammarFileName = "simplifiedJavaGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "':'", "'end'", "'main'", 
                     "'var'", "';'", "'const'", "'='", "'while'", "'break;'", 
                     "'print'", "'scanf'", "'return'", "'if'", "'else'", 
                     "'>='", "'<='", "'>'", "'<'", "'=='", "'!='", "'+'", 
                     "'-'", "'*'", "'/'", "'!'", "<INVALID>", "'void'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TYPE", "VOID", "INT", "FLOAT", "STRING", 
                      "BOOLEAN", "ID", "WS", "CommentInOneLine", "CommentOnMultipleLines" ]

    RULE_program = 0
    RULE_functionDeclarationArea = 1
    RULE_main = 2
    RULE_variablesDeclarationArea = 3
    RULE_variablesDeclaration = 4
    RULE_constantsDeclaration = 5
    RULE_commands = 6
    RULE_callFunctionCommand = 7
    RULE_ifCommand = 8
    RULE_whileCommand = 9
    RULE_breakCommand = 10
    RULE_printCommand = 11
    RULE_scanfCommand = 12
    RULE_returnCommand = 13
    RULE_ifBlock = 14
    RULE_elseBlock = 15
    RULE_assigmentCommand = 16
    RULE_expression = 17
    RULE_term = 18
    RULE_term2 = 19
    RULE_term3 = 20
    RULE_term4 = 21
    RULE_term5 = 22
    RULE_factor = 23

    ruleNames =  [ "program", "functionDeclarationArea", "main", "variablesDeclarationArea", 
                   "variablesDeclaration", "constantsDeclaration", "commands", 
                   "callFunctionCommand", "ifCommand", "whileCommand", "breakCommand", 
                   "printCommand", "scanfCommand", "returnCommand", "ifBlock", 
                   "elseBlock", "assigmentCommand", "expression", "term", 
                   "term2", "term3", "term4", "term5", "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    TYPE=29
    VOID=30
    INT=31
    FLOAT=32
    STRING=33
    BOOLEAN=34
    ID=35
    WS=36
    CommentInOneLine=37
    CommentOnMultipleLines=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.MainContext,0)


        def EOF(self):
            return self.getToken(simplifiedJavaGrammarParser.EOF, 0)

        def functionDeclarationArea(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaGrammarParser.FunctionDeclarationAreaContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaGrammarParser.FunctionDeclarationAreaContext,i)


        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = simplifiedJavaGrammarParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==simplifiedJavaGrammarParser.ID:
                self.state = 48
                self.functionDeclarationArea()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.main()
            self.state = 55
            self.match(simplifiedJavaGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationAreaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaGrammarParser.ID)
            else:
                return self.getToken(simplifiedJavaGrammarParser.ID, i)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaGrammarParser.TYPE)
            else:
                return self.getToken(simplifiedJavaGrammarParser.TYPE, i)

        def VOID(self):
            return self.getToken(simplifiedJavaGrammarParser.VOID, 0)

        def variablesDeclarationArea(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.VariablesDeclarationAreaContext,0)


        def commands(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaGrammarParser.CommandsContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaGrammarParser.CommandsContext,i)


        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_functionDeclarationArea

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclarationArea" ):
                listener.enterFunctionDeclarationArea(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclarationArea" ):
                listener.exitFunctionDeclarationArea(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclarationArea" ):
                return visitor.visitFunctionDeclarationArea(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclarationArea(self):

        localctx = simplifiedJavaGrammarParser.FunctionDeclarationAreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDeclarationArea)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(simplifiedJavaGrammarParser.ID)
            self.state = 58
            self.match(simplifiedJavaGrammarParser.T__0)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==simplifiedJavaGrammarParser.TYPE:
                self.state = 59
                self.match(simplifiedJavaGrammarParser.TYPE)
                self.state = 60
                self.match(simplifiedJavaGrammarParser.ID)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==simplifiedJavaGrammarParser.T__1:
                    self.state = 61
                    self.match(simplifiedJavaGrammarParser.T__1)
                    self.state = 62
                    self.match(simplifiedJavaGrammarParser.TYPE)
                    self.state = 63
                    self.match(simplifiedJavaGrammarParser.ID)
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 71
            self.match(simplifiedJavaGrammarParser.T__2)
            self.state = 72
            self.match(simplifiedJavaGrammarParser.T__3)
            self.state = 73
            _la = self._input.LA(1)
            if not(_la==simplifiedJavaGrammarParser.TYPE or _la==simplifiedJavaGrammarParser.VOID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==simplifiedJavaGrammarParser.T__6:
                self.state = 74
                self.variablesDeclarationArea()


            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simplifiedJavaGrammarParser.T__10) | (1 << simplifiedJavaGrammarParser.T__11) | (1 << simplifiedJavaGrammarParser.T__12) | (1 << simplifiedJavaGrammarParser.T__13) | (1 << simplifiedJavaGrammarParser.T__14) | (1 << simplifiedJavaGrammarParser.T__15) | (1 << simplifiedJavaGrammarParser.ID))) != 0):
                self.state = 77
                self.commands()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(simplifiedJavaGrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variablesDeclarationArea(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.VariablesDeclarationAreaContext,0)


        def commands(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaGrammarParser.CommandsContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaGrammarParser.CommandsContext,i)


        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain" ):
                return visitor.visitMain(self)
            else:
                return visitor.visitChildren(self)




    def main(self):

        localctx = simplifiedJavaGrammarParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(simplifiedJavaGrammarParser.T__5)
            self.state = 86
            self.match(simplifiedJavaGrammarParser.T__3)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==simplifiedJavaGrammarParser.T__6:
                self.state = 87
                self.variablesDeclarationArea()


            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simplifiedJavaGrammarParser.T__10) | (1 << simplifiedJavaGrammarParser.T__11) | (1 << simplifiedJavaGrammarParser.T__12) | (1 << simplifiedJavaGrammarParser.T__13) | (1 << simplifiedJavaGrammarParser.T__14) | (1 << simplifiedJavaGrammarParser.T__15) | (1 << simplifiedJavaGrammarParser.ID))) != 0):
                self.state = 90
                self.commands()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(simplifiedJavaGrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesDeclarationAreaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variablesDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaGrammarParser.VariablesDeclarationContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaGrammarParser.VariablesDeclarationContext,i)


        def constantsDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaGrammarParser.ConstantsDeclarationContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaGrammarParser.ConstantsDeclarationContext,i)


        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_variablesDeclarationArea

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariablesDeclarationArea" ):
                listener.enterVariablesDeclarationArea(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariablesDeclarationArea" ):
                listener.exitVariablesDeclarationArea(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariablesDeclarationArea" ):
                return visitor.visitVariablesDeclarationArea(self)
            else:
                return visitor.visitChildren(self)




    def variablesDeclarationArea(self):

        localctx = simplifiedJavaGrammarParser.VariablesDeclarationAreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variablesDeclarationArea)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(simplifiedJavaGrammarParser.T__6)
            self.state = 99
            self.match(simplifiedJavaGrammarParser.T__3)
            self.state = 102 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 102
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [simplifiedJavaGrammarParser.ID]:
                        self.state = 100
                        self.variablesDeclaration()
                        pass
                    elif token in [simplifiedJavaGrammarParser.T__8]:
                        self.state = 101
                        self.constantsDeclaration()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 104 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaGrammarParser.ID)
            else:
                return self.getToken(simplifiedJavaGrammarParser.ID, i)

        def TYPE(self):
            return self.getToken(simplifiedJavaGrammarParser.TYPE, 0)

        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_variablesDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariablesDeclaration" ):
                listener.enterVariablesDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariablesDeclaration" ):
                listener.exitVariablesDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariablesDeclaration" ):
                return visitor.visitVariablesDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variablesDeclaration(self):

        localctx = simplifiedJavaGrammarParser.VariablesDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variablesDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(simplifiedJavaGrammarParser.ID)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==simplifiedJavaGrammarParser.T__1:
                self.state = 107
                self.match(simplifiedJavaGrammarParser.T__1)
                self.state = 108
                self.match(simplifiedJavaGrammarParser.ID)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(simplifiedJavaGrammarParser.T__3)
            self.state = 115
            self.match(simplifiedJavaGrammarParser.TYPE)
            self.state = 116
            self.match(simplifiedJavaGrammarParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantsDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.terminal = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaGrammarParser.ID)
            else:
                return self.getToken(simplifiedJavaGrammarParser.ID, i)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaGrammarParser.STRING)
            else:
                return self.getToken(simplifiedJavaGrammarParser.STRING, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaGrammarParser.INT)
            else:
                return self.getToken(simplifiedJavaGrammarParser.INT, i)

        def BOOLEAN(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaGrammarParser.BOOLEAN)
            else:
                return self.getToken(simplifiedJavaGrammarParser.BOOLEAN, i)

        def FLOAT(self, i:int=None):
            if i is None:
                return self.getTokens(simplifiedJavaGrammarParser.FLOAT)
            else:
                return self.getToken(simplifiedJavaGrammarParser.FLOAT, i)

        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_constantsDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstantsDeclaration" ):
                listener.enterConstantsDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstantsDeclaration" ):
                listener.exitConstantsDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantsDeclaration" ):
                return visitor.visitConstantsDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constantsDeclaration(self):

        localctx = simplifiedJavaGrammarParser.ConstantsDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constantsDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(simplifiedJavaGrammarParser.T__8)
            self.state = 119
            self.match(simplifiedJavaGrammarParser.ID)
            self.state = 120
            self.match(simplifiedJavaGrammarParser.T__9)
            self.state = 121
            localctx.terminal = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simplifiedJavaGrammarParser.INT) | (1 << simplifiedJavaGrammarParser.FLOAT) | (1 << simplifiedJavaGrammarParser.STRING) | (1 << simplifiedJavaGrammarParser.BOOLEAN))) != 0)):
                localctx.terminal = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==simplifiedJavaGrammarParser.T__1:
                self.state = 122
                self.match(simplifiedJavaGrammarParser.T__1)
                self.state = 123
                self.match(simplifiedJavaGrammarParser.ID)
                self.state = 124
                self.match(simplifiedJavaGrammarParser.T__9)
                self.state = 125
                localctx.terminal = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simplifiedJavaGrammarParser.INT) | (1 << simplifiedJavaGrammarParser.FLOAT) | (1 << simplifiedJavaGrammarParser.STRING) | (1 << simplifiedJavaGrammarParser.BOOLEAN))) != 0)):
                    localctx.terminal = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(simplifiedJavaGrammarParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifCommand(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.IfCommandContext,0)


        def whileCommand(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.WhileCommandContext,0)


        def assigmentCommand(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.AssigmentCommandContext,0)


        def callFunctionCommand(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.CallFunctionCommandContext,0)


        def printCommand(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.PrintCommandContext,0)


        def scanfCommand(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.ScanfCommandContext,0)


        def returnCommand(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.ReturnCommandContext,0)


        def breakCommand(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.BreakCommandContext,0)


        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_commands

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommands" ):
                listener.enterCommands(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommands" ):
                listener.exitCommands(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommands" ):
                return visitor.visitCommands(self)
            else:
                return visitor.visitChildren(self)




    def commands(self):

        localctx = simplifiedJavaGrammarParser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_commands)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.ifCommand()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.whileCommand()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.assigmentCommand()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.callFunctionCommand()
                self.state = 137
                self.match(simplifiedJavaGrammarParser.T__7)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.printCommand()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.scanfCommand()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 141
                self.returnCommand()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 142
                self.breakCommand()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallFunctionCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(simplifiedJavaGrammarParser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaGrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaGrammarParser.ExpressionContext,i)


        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_callFunctionCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallFunctionCommand" ):
                listener.enterCallFunctionCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallFunctionCommand" ):
                listener.exitCallFunctionCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallFunctionCommand" ):
                return visitor.visitCallFunctionCommand(self)
            else:
                return visitor.visitChildren(self)




    def callFunctionCommand(self):

        localctx = simplifiedJavaGrammarParser.CallFunctionCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_callFunctionCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(simplifiedJavaGrammarParser.ID)
            self.state = 146
            self.match(simplifiedJavaGrammarParser.T__0)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << simplifiedJavaGrammarParser.T__0) | (1 << simplifiedJavaGrammarParser.T__24) | (1 << simplifiedJavaGrammarParser.T__27) | (1 << simplifiedJavaGrammarParser.INT) | (1 << simplifiedJavaGrammarParser.FLOAT) | (1 << simplifiedJavaGrammarParser.STRING) | (1 << simplifiedJavaGrammarParser.BOOLEAN) | (1 << simplifiedJavaGrammarParser.ID))) != 0):
                self.state = 147
                self.expression(0)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==simplifiedJavaGrammarParser.T__1:
                    self.state = 148
                    self.match(simplifiedJavaGrammarParser.T__1)
                    self.state = 149
                    self.expression(0)
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 157
            self.match(simplifiedJavaGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifBlock(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.IfBlockContext,0)


        def elseBlock(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.ElseBlockContext,0)


        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_ifCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfCommand" ):
                listener.enterIfCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfCommand" ):
                listener.exitIfCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfCommand" ):
                return visitor.visitIfCommand(self)
            else:
                return visitor.visitChildren(self)




    def ifCommand(self):

        localctx = simplifiedJavaGrammarParser.IfCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifCommand)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.ifBlock()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==simplifiedJavaGrammarParser.T__16:
                self.state = 160
                self.elseBlock()


            self.state = 163
            self.match(simplifiedJavaGrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(simplifiedJavaGrammarParser.ExpressionContext,0)


        def commands(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(simplifiedJavaGrammarParser.CommandsContext)
            else:
                return self.getTypedRuleContext(simplifiedJavaGrammarParser.CommandsContext,i)


        def getRuleIndex(self):
            return simplifiedJavaGrammarParser.RULE_whileCommand
